# tdd_fastapi

./: .pre-commit-config.yaml  api.http  docker-compose.yaml  pyproject.toml
src/: main.py
src/core/: config.py
