[tool.poetry]
name = "tdd-fastapi"
version = "0.1.0"
description = ""
authors = ["Victor Gonçalves <victor@goncalvesmarques.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"
pytest = "^8.1.1"
pre-commit = "^3.7.0"
taskipy = "^1.12.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"%
run = "uvicorn src.main:app --reload"
pre_commit = "pre-commit run --all-files"
